fix overflow bug with vertical rotation

--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,15 @@ code {
 
 .nav {
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-evenly;
   padding-top: 2rem;
   padding-bottom: 1rem;
   width: 100%;
   font-size: 2rem;
   font-family: Copperplate, Papyrus, fantasy;
+  /* height: 30px; */
+
 }
 
 .nav a {
@@ -81,7 +83,8 @@ code {
   padding-bottom: 5%;
   box-sizing: border-box;
   text-align: center;
-  overflow-y: auto
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 #home-intro {
@@ -155,6 +158,7 @@ code {
 
 .about p {
   text-align: center;
+  /* overflow-y: auto; */
 }
 
 .about h2 {
@@ -230,6 +234,7 @@ code {
   max-height:inherit;
   box-sizing: border-box;
   padding-bottom: 1%;
+  overflow-y: scroll;
 }
 
 .projects {
@@ -257,7 +262,6 @@ code {
 }
 
 .proj-1, .proj-2 {
-  /* height: 40%; */
   width: 100%;
   display: flex;
   box-sizing: border-box;
